<resources>
    <string name="app_name">RedOne</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="contact">Kontak Relasi</string>
    <string name="search">Pencarian Donor</string>
    <string name="history">Riwayat</string>
    <string name="setting">Pengaturan</string>
    <string name="help">Bantuan</string>
    <string name="logout">Keluar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goldar">Pilih Golongan Darah</string>
    <string name="rhesus">Pilih Rhesus</string>
    <string name="jumlah">Jumlah</string>
    <string name="kantong">kantong</string>
    <string name="signup">Sign Up</string>
    <string name="loginhint">Phone number, username or email</string>
    <string name="login">Log In</string>
    <string name="logingoogle">Continue with Google</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="signuphint">Mobile number or email</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="savelife">Sign up to save a life</string>
    <string name="haveaccount">Have an account?</string>
    <string name="submit">Submit</string>
    <string name="rs">Pilih Rumah Sakit</string>
    <string name="fon">Your Phone Number</string>
    <string name="golongan">Golongan Darah : </string>
    <string name="findpeople">orang ditemukan</string>
    <string name="pmi">Stok Darah PMI</string>
    <string name="user">Pengguna Aplikasi</string>
</resources>
