<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/savelife"
        android:textColor="@color/red"
        android:textSize="@dimen/text_18" />

    <Button
        android:id="@+id/btn_signgoogle"
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_50"
        android:background="@drawable/botton"
        android:text="@string/logingoogle"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_50"
        android:gravity="center"
        android:text="OR"
        android:textColor="@color/gray" />

    <EditText
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/edit_text"
        android:hint="@string/signuphint"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/edit_text"
        android:hint="@string/fullname"
        android:inputType="text" />

    <EditText
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/edit_text"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/botton"
        android:text="@string/next"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/haveaccount"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/login"
            android:textColor="@color/red" />
    </LinearLayout>

</LinearLayout>