<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_red_nobg"
        android:layout_marginBottom="@dimen/margin_50"/>

    <EditText
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/edit_text"
        android:hint="@string/loginhint"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/margin_300"
        android:layout_height="@dimen/margin_60"
        android:layout_marginBottom="@dimen/margin_50"
        android:background="@drawable/botton"
        android:text="@string/login"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_50"
        android:gravity="center"
        android:text="OR"
        android:textColor="@color/gray" />

    <Button
        android:id="@+id/btn_loggoogle"
        android:layout_width="@dimen/margin_300"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/margin_55"
        android:background="@drawable/botton"
        android:text="@string/logingoogle"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donthaveaccount"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/signup"
            android:textColor="@color/red" />
    </LinearLayout>

</LinearLayout>