<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".DonorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/golongan"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_25" />

        <TextView
            android:id="@+id/golongan_darah_ditemukan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:text="A"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_25" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/jumlah_pendonor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_50"
            android:text="@string/findpeople" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_contact"
        android:layout_width="350dp"
        android:layout_height="@dimen/margin_100"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_50"
        android:background="@color/colorPrimary"
        android:padding="@dimen/margin_16"
        android:text="@string/contact"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18" />

    <TextView
        android:id="@+id/tv_pmi"
        android:layout_width="350dp"
        android:layout_height="@dimen/margin_100"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_50"
        android:background="@color/colorPrimary"
        android:padding="@dimen/margin_16"
        android:text="@string/pmi"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="350dp"
        android:layout_height="@dimen/margin_100"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_50"
        android:background="@color/colorPrimary"
        android:padding="@dimen/margin_16"
        android:text="@string/user"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18" />

</LinearLayout>