<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/goldar"
            android:textSize="@dimen/text_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="center"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_a"
                android:layout_width="@dimen/margin_55"
                android:layout_height="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_16"
                android:src="@android:color/darker_gray" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_b"
                android:layout_width="@dimen/margin_55"
                android:layout_height="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_16"
                android:src="@android:color/darker_gray" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_ab"
                android:layout_width="@dimen/margin_55"
                android:layout_height="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_16"
                android:src="@android:color/darker_gray" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_o"
                android:layout_width="@dimen/margin_55"
                android:layout_height="@dimen/margin_55"
                android:src="@android:color/darker_gray" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rhesus"
            android:textSize="@dimen/text_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="center"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/rhesus_plus"
                android:layout_width="@dimen/margin_55"
                android:layout_height="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_16"
                android:src="@android:color/darker_gray" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/rhesus_min"
                android:layout_width="@dimen/margin_55"
                android:layout_height="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_16"
                android:src="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/jumlah"
            android:textSize="@dimen/text_18" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kantong"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_16"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Cari Donor"/>


    </LinearLayout>
</FrameLayout>